add style and scale

--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,9 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/animejs/lib/js/anime.min.js",
+              "node_modules/animejs/lib/js/anime.es.js"
             ]
           }
         }
