--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "animejs": "^3.2.1",
     "bootstrap": "^3.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
